fix aligns

--- a/source/styles/blocks/card.less
+++ b/source/styles/blocks/card.less
@@ -20,6 +20,7 @@
 
 .card-header {
   display: flex;
+  align-items: flex-start;
   margin: 0 0 4px;
 }
 
@@ -51,6 +52,7 @@
   color: @grey;
   display: flex;
   align-items: center;
+  max-width: 160px;
 }
 
 .card-label__circle {
